Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
-
Bug fixes:
~~~~~~~~~~
- Added translations for conformance statement box banners
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- nuxeo_css1: no more hardcoded Time police for q and blocquote tag