@@ -3,7 +3,8 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
--
+- Nice error message when you don't insert a valid login on the mail password
+  form.
 Bug fixes:
 ~~~~~~~~~~
 - Added translations for conformance statement box banners
